# DiskMind

./: .gitignore  README.md
app/: .gitignore  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/e2e/: smoke.spec.ts
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: crash_log.rs  crypto.rs  i18n.rs  lib.rs  main.rs  platform.rs  state.rs
app/src-tauri/src/ai/: anthropic.rs  cost.rs  log_helper.rs  mod.rs  ollama.rs  openai.rs  orchestrator.rs  prompts.rs  provider.rs
app/src-tauri/src/classifier/: mod.rs  user_rules.rs
app/src-tauri/src/commands/: ai_chat.rs  ai_classify.rs  ai_single.rs  chat_history.rs  classifier.rs  crash_log.rs  diag.rs  history.rs  meta.rs  mod.rs  provider.rs  scan.rs  trash.rs
app/src-tauri/src/db/: ai_cleaning_advice.rs  ai_log.rs  chat.rs  classify.rs  diag.rs  meta.rs  mod.rs  provider.rs  scan.rs  trash.rs
app/src-tauri/src/scanner/: mod.rs
app/src-tauri/src/trash/: mod.rs
app/src/api/: tauri.ts
app/src/assets/: index.css
app/src/components/layout/: AiActionCard.vue  AiDrawer.vue  AiExplainDialog.vue  AppSidebar.vue  BreadcrumbBar.vue  CommandPalette.vue  CrashReportDialog.vue  SiteHeader.vue
app/src/components/shared/: RecoveryTrendChart.vue
app/src/components/ui/chart/: ChartLegendContent.vue
app/src/components/ui/checkbox/: Checkbox.vue
app/src/components/ui/dialog/: DialogOverlay.vue
app/src/components/ui/dropdown-menu/: DropdownMenuSubTrigger.vue
app/src/components/ui/select/: SelectTrigger.vue
app/src/components/ui/sheet/: SheetOverlay.vue
app/src/components/ui/sonner/: Sonner.vue
app/src/composables/: usePathMask.ts  useTheme.ts
app/src/data/: mock.ts
app/src/i18n/: en-US.ts  index.ts  zh-CN.ts
app/src/layouts/: AppLayout.vue
app/src/lib/: aiActions.ts  buildTree.spec.ts  buildTree.ts  flattenTree.spec.ts  flattenTree.ts  localize.spec.ts  localize.ts  notify.ts  pathMask.spec.ts  pathMask.ts  pathSep.spec.ts  pathSep.ts  selectAdviceTier.spec.ts  selectAdviceTier.ts
app/src/pages/dashboard/: index.vue
app/src/pages/dashboard/components/: CategoryBarChart.vue  ChartAreaInteractive.vue  HighRiskCard.vue  LastScanSummary.vue  QuickActions.vue  RiskDonutChart.vue  SectionCards.vue  TrendCard.vue
app/src/pages/disk-map/components/: DiskMapDetailPanel.vue  DiskMapTreemap.vue  DiskMapView.vue
app/src/pages/reports/: index.vue
app/src/pages/reports/components/: AiCallLogsCard.vue  AiCleaningAdviceCard.spec.ts  AiCleaningAdviceCard.vue  (+7 more)
app/src/pages/scan/: index.vue
app/src/pages/settings/: index.vue
app/src/pages/trash/: index.vue
app/src/router/: index.ts
app/src/stores/: ai.spec.ts  ai.ts  privacy.ts  providers.ts  reports.ts  scan.ts  scanSettings.ts  trash.ts
app/test/: setup.ts
design/: 2026-05-25-02-DiskMind技术设计文档.md  2026-05-25-03-DiskMind原型设计.md  2026-05-25-04-DuckDB介绍.md  2026-05-25-05-DiskMind开发待办-85%.md  2026-05-25-05-DiskMind开发待办-86%.md  2026-05-25-05-DiskMind开发待办-87%.md  2026-05-25-05-DiskMind开发待办-88%.md  2026-05-25-05-DiskMind开发待办-89%.md  2026-05-25-05-DiskMind开发待办-90%.md  2026-05-25-05-DiskMind开发待办-92%.md  2026-05-25-05-DiskMind开发待办-94%.md  2026-05-25-05-DiskMind开发待办-95%.md  2026-05-25-05-DiskMind开发待办.md  2026-05-25-DiskMind可行性分析报告.md  2026-05-26-01-DiskMind智能扫描可行性分析.md  2026-05-28-01-DiskMind后续迭代计划.md
design/html/: 2026-05-25-02-DiskMind技术设计文档.html  2026-05-25-DiskMind可行性分析报告.html
design/logo/: preview.html
(+17 files in other folders)
