[package]
name = "diskmind"
version = "0.1.0"
description = "DiskMind — AI-powered macOS / Windows disk cleaner with a local-first sandbox."
authors = ["Terrell She <shetengteng@github>"]
license = "MIT"
repository = "https://github.com/shetengteng/DiskMind"
homepage = "https://github.com/shetengteng/DiskMind"
readme = "../README.md"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4"
walkdir = "2.5"
dirs = "5.0"
glob = "0.3"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
futures-util = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
thiserror = "2"
async-stream = "0.3"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
