[package]
name = "diskmind"
version = "0.1.0"
description = "DiskMind — AI-powered macOS / Windows disk cleaner with a local-first sandbox."
authors = ["Terrell She <shetengteng@github>"]
license = "MIT"
repository = "https://github.com/shetengteng/DiskMind"
homepage = "https://github.com/shetengteng/DiskMind"
readme = "../README.md"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4"
walkdir = "2.5"
# CPU 并行 — 仅在 scanner 里用于并行 stat metadata,Round 20 加(P0-1.2)。
# 不在 tokio runtime 里跑,避免阻塞 async 调度。
rayon = "1.10"
dirs = "5.0"
glob = "0.3"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
futures-util = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
thiserror = "2"
async-stream = "0.3"
tauri-plugin-dialog = "2.7.1"
# Round 29 · Provider API Key AEAD 加密。chacha20poly1305 是 RFC8439 的
# 纯 Rust 实现,无 native deps,内存安全;machine-uid 用 gethostuuid(3) /
# Windows registry 拿稳定的设备唯一 ID 派生主密钥(无需 root 权限)。
chacha20poly1305 = "0.10"
machine-uid = "0.6"
base64 = "0.22"
# Round 29 · classifier 用户自定义规则外置。toml 用 serde 反序列化用户在
# `app_data/rules.toml` 里写的额外匹配规则,无 native deps。
toml = "0.8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[dev-dependencies]
# 单测构造临时文件树用 — 自动清理 + cross-platform。
tempfile = "3.13"
